feat: add mass deactivation
