# internal/routes/routes.go
@@ -14,10 +14,15 @@ func RegisterRoutes(e *echo.Echo, handler *handlers.Handler) {
 
 	e.POST("/users/setIsActive", handler.SetUserActive)
 	e.GET("/users/getReview", handler.GetUserReviews)
+	e.POST("/users/massDeactivate", handler.MassDeactivateTeamUsers)
 
 	e.POST("/pullRequest/create", handler.CreatePR)
 	e.POST("/pullRequest/merge", handler.MergePR)
 	e.POST("/pullRequest/reassign", handler.ReassignReviewer)
+
+	e.GET("/stats/users", handler.GetUserReviewStats)
+	e.GET("/stats/prs", handler.GetPRReviewStats)
+	e.GET("/stats/overall", handler.GetOverallStats)
 
 	e.GET("/health", handler.HealthCheck)
 }
